# manata-cloudfront

./: .gitignore  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: deploy.yml  region_deploy.yml
docker/api/: Dockerfile
docker/celery/beat/: start
docker/celery/worker/: start
docker/nginx/: Dockerfile  nginx.conf  proxy_params
templates/: index.html
