[tool.poetry]
name = "manata-cloudfront"
version = "0.1.0"
description = ""
authors = ["Mykhailo Polishchuk <mpolishchuk86@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13.2"
fastapi = {extras = ["standard"], version = "^0.115.12"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
